manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-cli-manager
  annotations:
    openshift.io/node-selector: ""
  labels:
    openshift.io/cluster-monitoring: "true"
