manifests/clustercli-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    service: clustercli-fileserver
  name: clustercli-fileserver
  namespace: openshift-cli-manager
spec:
  ports:
    - name: http
      port: 80
  selector:
    service: clustercli-fileserver
status:
  loadBalancer: {}
